--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,7 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/core": "^3.2.1",
-        "doctrine/doctrine-bundle": "^2.10.2",
-        "doctrine/doctrine-migrations-bundle": "^3.2.4",
-        "doctrine/orm": "^3.0.1",
+        "liip/imagine-bundle": "^2.12",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/asset": "^7.0.0",
         "symfony/console": "^7.0.0",
